Fetch SASKey information using Management APIs if not passed in parameters